PWA-ready index.html

--- a/public/planner.html
+++ b/public/planner.html
@@ -108,23 +108,14 @@ button.secondary {
   padding: 0.9rem;
   background: #020617;
   position: relative;
-  transition: transform 0.3s cubic-bezier(0.22, 1, 0.36, 1);
-  user-select: none;
-  .day-box {
-  border: 1px solid #1f2937;
-  border-radius: 12px;
-  padding: 0.9rem;
-  background: #020617;
-  position: relative;
-  transition: transform 0.3s cubic-bezier(0.22, 1, 0.36, 1);
-  user-select: none;           /* Prevent text selection */
-  -webkit-user-select: none;   /* Safari/iOS */
-  -ms-user-select: none;       /* IE10+ */
-  -webkit-touch-callout: none; /* Disable callout menu on long press */
-  touch-action: pan-y;         /* Allow vertical scrolling, block horizontal selection */
+  transition: transform 0.3s cubic-bezier(0.22, 1, 0.36, 1), opacity 0.3s;
+  user-select: none;           
+  -webkit-user-select: none;   
+  -ms-user-select: none;       
+  -webkit-touch-callout: none; 
+  touch-action: pan-y;         
 }
 
-}
 .day-title {
   font-weight: 600;
   margin-bottom: 0.4rem;
@@ -139,18 +130,25 @@ button.secondary {
   font-size: 0.9rem;
 }
 
-/* ===== DELETE PROGRESS BAR ===== */
-.delete-progress {
+/* ===== DELETE SWIPE UP BAR ===== */
+.delete-bar {
   position: absolute;
-  bottom: 0;
+  top: 0;
   left: 0;
-  height: 4px;
-  background: #ef4444;
-  width: 0%;
-  transition: width 0.1s linear;
+  height: 100%;
+  width: 100%;
+  background: rgba(239, 68, 68, 0.15);
+  border-radius: 12px;
+  transform: translateY(100%);
+  transition: transform 0.3s ease;
+  z-index: 1;
 }
 
-/* ===== SWIPE CLASSES ===== */
+.day-box.deleting .delete-bar {
+  transform: translateY(0);
+}
+
+/* ===== SWIPE LEFT/RIGHT FOR NEXT/PREV DAY ===== */
 .day-box.swipe-left {
   transform: translateX(-100%);
 }
@@ -174,31 +172,15 @@ button.secondary {
     <div class="card">
       <h3>Add Workout</h3>
 
-      <input
-        type="text"
-        id="workoutName"
-        placeholder="Workout Name"
-      />
+      <input type="text" id="workoutName" placeholder="Workout Name" />
 
       <div class="date-wrapper">
-        <input
-          type="text"
-          id="dateDisplay"
-          class="date-display"
-          placeholder="Select date"
-          readonly
-        />
-        <input
-          type="date"
-          id="dateInput"
-          class="date-hidden"
-        />
+        <input type="text" id="dateDisplay" class="date-display" placeholder="Select date" readonly />
+        <input type="date" id="dateInput" class="date-hidden" />
       </div>
 
       <button id="addBtn">Add Workout</button>
-      <button id="backBtn" class="secondary">
-         Back
-      </button>
+      <button id="backBtn" class="secondary">Back</button>
     </div>
 
     <!-- DAY VIEW -->
@@ -244,8 +226,7 @@ const backBtn = document.getElementById('backBtn');
 
 let offset = 0;
 let startX = 0;
-let holdTimer;
-let progressInterval;
+let startY = 0;
 
 /* DATE PICKER SYNC */
 dateDisplay.addEventListener('click', () => dateInput.showPicker?.());
@@ -273,54 +254,41 @@ function renderDay() {
 
   dayView.innerHTML = `
     <div class="day-box swipe-reset" data-date="${key}">
+      <div class="delete-bar"></div>
       <div class="day-title">${d.toDateString()}</div>
       <div class="day-workout">
         ${planner[key] || '<span class="empty">No workout</span>'}
       </div>
-      <div class="delete-progress"></div>
     </div>
   `;
 
   const box = dayView.querySelector('.day-box');
-  const progress = box.querySelector('.delete-progress');
+  const deleteBar = box.querySelector('.delete-bar');
 
-  /* LONG PRESS DELETE: 3s delay */
-  box.addEventListener('touchstart', () => {
-    holdTimer = setTimeout(() => {
-      // Start showing progress bar only after 3s hold
-      let width = 0;
-      progress.style.width = '0%';
-      progressInterval = setInterval(() => {
-        width += 1;
-        progress.style.width = width + '%';
-        if (width >= 100) {
-          clearInterval(progressInterval);
-          if (planner[key]) {
-            delete planner[key];
-            localStorage.setItem('planner', JSON.stringify(planner));
-            if (navigator.vibrate) navigator.vibrate(50);
-            renderDay();
-          }
-        }
-      }, 30);
-    }, 2000); // 3 seconds before progress appears
+  /* SWIPE UP TO DELETE */
+  box.addEventListener('touchstart', e => {
+    startX = e.touches[0].clientX;
+    startY = e.touches[0].clientY;
   });
 
-  box.addEventListener('touchend', () => {
-    clearTimeout(holdTimer);
-    clearInterval(progressInterval);
-    progress.style.width = '0%';
-  });
-
-  /* SWIPE ANIMATION */
-  box.addEventListener('touchstart', e => startX = e.touches[0].clientX);
   box.addEventListener('touchend', e => {
     const dx = e.changedTouches[0].clientX - startX;
-    if (dx < -50) {
+    const dy = e.changedTouches[0].clientY - startY;
+
+    if (dy < -50) { // swipe up
+      box.classList.add('deleting');
+      setTimeout(() => {
+        if (planner[key]) {
+          delete planner[key];
+          localStorage.setItem('planner', JSON.stringify(planner));
+          if (navigator.vibrate) navigator.vibrate(50);
+          renderDay();
+        }
+      }, 300); // animation time
+    } else if (dx < -50) {
       box.classList.add('swipe-left');
       setTimeout(() => { offset += 1; renderDay(); }, 300);
-    }
-    if (dx > 50) {
+    } else if (dx > 50) {
       box.classList.add('swipe-right');
       setTimeout(() => { offset -= 1; renderDay(); }, 300);
     }
