PWA-ready index.html

--- a/public/planner.html
+++ b/public/planner.html
@@ -42,6 +42,7 @@ button.secondary { background: #1f2937; color: #e5e7eb; }
 </head>
 
 <body>
+<body class="planner-page">
 
 <div class="top-nav">Ascend</div>
 
