PWA-ready index.html

--- a/public/workout.html
+++ b/public/workout.html
@@ -70,7 +70,7 @@
     }
   </style>
 </head>
-
+<div id="saveToast">Workout saved!</div>
 <body>
 
   <div class="top-nav">Ascend</div>
@@ -101,7 +101,7 @@
     </div>
   </div>
 
-  <div id="popup" class="popup hidden">Workout Saved!</div>
+
 
   <script src="workouts.js"></script>
 
