--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -58,6 +58,8 @@
 
       <button onclick="location.href='workout.html'">Create Workout</button>
       <button class="secondary" onclick="location.href='view.html'">View My Workouts</button>
+      <button onclick="location.href='analytics.html'">
+
     </div>
 
     <!-- Planner Preview Card -->
@@ -67,7 +69,7 @@
     <h3>Planner</h3>
   </div>
 
-  
+
 <div class="card">
   <h3>Today's Workout</h3>
   <p id="todayWorkout">Loading...</p>
