PWA-ready index.html

--- a/public/analytics.html
+++ b/public/analytics.html
@@ -29,3 +29,17 @@
   <script src="analytics.js"></script>
 </body>
 </html>
+<div class="analytics-card">
+  <h3>Total Tonnage</h3>
+  <p id="totalTonnage">0 kg</p>
+</div>
+
+<div class="analytics-card">
+  <h3>Total Sets</h3>
+  <p id="totalSets">0</p>
+</div>
+
+<div class="analytics-card">
+  <h3>Total Reps</h3>
+  <p id="totalReps">0</p>
+</div>
