--- a/public/workout.html
+++ b/public/workout.html
@@ -77,7 +77,7 @@
 
   <div style="text-align:center;">
     <button class="back-btn" onclick="location.href='dashboard.html'">
-      ← Back to Dashboard
+    Back to Dashboard
     </button>
   </div>
 
