--- a/public/view.html
+++ b/public/view.html
@@ -10,84 +10,121 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
 <style>
-    .top-nav {
-      position: sticky;
-      top: 0;
-      z-index: 100;
-      background: #111827;
-      border-bottom: 1px solid #1f2937;
-      padding: 1rem;
-      text-align: center;
-      font-weight: 600;
-      color: #38bdf8;
-      font-size: 1.2rem;
-    }
+.top-nav {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background: #111827;
+  border-bottom: 1px solid #1f2937;
+  padding: 1rem;
+  text-align: center;
+  font-weight: 600;
+  color: #38bdf8;
+  font-size: 1.2rem;
+}
 
-    .back-btn {
-      display: inline-block;
-      margin: 0.5rem auto 1rem auto;
-      padding: 0.5rem 1rem;
-      border-radius: 10px;
-      border: none;
-      background: #38bdf8;
-      color: #020617;
-      font-weight: 600;
-      cursor: pointer;
-      font-size: 0.9rem;
-      text-align: center;
-    }
+.back-btn {
+  display: inline-block;
+  margin: 0.5rem auto 1rem auto;
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  border: none;
+  background: #38bdf8;
+  color: #020617;
+  font-weight: 600;
+  cursor: pointer;
+  font-size: 0.9rem;
+  text-align: center;
+}
 
-    .back-btn:hover { opacity: 0.85; }
+.back-btn:hover { opacity: 0.85; }
 
-    .page {
-      display: flex;
-      flex-direction: column;
-      padding-top: 1rem;
-      max-height: calc(100vh - 60px);
-    }
+.page {
+  display: flex;
+  flex-direction: column;
+  padding-top: 1rem;
+  max-height: calc(100vh - 60px);
+}
 
-    .container {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      overflow: hidden;
-    }
+.container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
 
-    .card {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      overflow: hidden;
-    }
+.card {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
 
-    #workoutsList {
-      flex: 1;
-      margin-top: 0.5rem;
-      overflow-y: auto;
-      -webkit-overflow-scrolling: touch;
-    }
+#workoutsList {
+  flex: 1;
+  margin-top: 0.5rem;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+}
 
-    details.exercise {
-      margin-bottom: 0.75rem;
-    }
+details.exercise {
+  margin-bottom: 0.5rem;
+  border: none;
+  background: none;
+  padding: 0;
+}
 
-    summary {
-      cursor: pointer;
-      font-weight: 600;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0.5rem 0; /* clean spacing, no box */
-    }
+summary {
+  cursor: pointer;
+  font-weight: 600;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.25rem 0;
+}
 
-    .exercise-details { margin-top: 0.5rem; padding-left: 0.5rem; }
-    .exercise-name { font-weight: 600; margin-top: 0.5rem; }
-    .set-item { margin-left: 10px; font-size: 0.9rem; display: flex; gap: 12px; }
-    .set-item span { display: inline-block; min-width: 50px; }
-    button.danger { width: auto; padding: 0.25rem 0.5rem; font-size: 0.8rem; margin-left: 0.5rem; }
-    .summary-left { display: flex; align-items: center; gap: 6px; }
-    .summary-arrow { transition: transform 0.3s ease; }
-    details[open] .summary-arrow { transform: rotate(90deg); }
+.exercise-details {
+  margin-top: 0.5rem;
+  padding-left: 0.5rem;
+}
+
+.exercise-name {
+  font-weight: 600;
+  margin-top: 0.25rem;
+}
+
+.set-item {
+  margin-left: 10px;
+  font-size: 0.9rem;
+  display: flex;
+  gap: 12px;
+}
+
+.set-item span {
+  display: inline-block;
+  min-width: 50px;
+}
+
+button.danger {
+  width: auto;
+  padding: 0.25rem 0.5rem;
+  font-size: 0.8rem;
+  margin-left: 0.5rem;
+}
+
+.summary-left {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
+.summary-arrow {
+  transition: transform 0.3s ease;
+}
+
+details[open] .summary-arrow {
+  transform: rotate(90deg);
+}
 </style>
 </head>
 <body>
@@ -145,7 +182,7 @@ if (!currentUser || !currentUser.workouts || currentUser.workouts.length === 0) 
       currentUser.workouts.splice(idx, 1);
       users[0] = currentUser;
       localStorage.setItem("users", JSON.stringify(users));
-      details.remove();
+      loadWorkouts();
     });
 
     summary.appendChild(leftDiv);
@@ -158,7 +195,76 @@ if (!currentUser || !currentUser.workouts || currentUser.workouts.length === 0) 
     workout.exercises.forEach(ex => {
       const exName = document.createElement("div");
       exName.classList.add("exercise-name");
-      exName.textContent = ex.name;
+      exName.textContent = `${ex.name}:`; // just like Bench:
+      detailsDiv.appendChild(exName);
+
+      ex.sets.forEach(s => {
+        const setDiv = document.createElement("div");
+        setDiv.classList.add("set-item");
+
+        if (ex.unilateral) {
+          setDiv.innerHTML = `<span>Left: ${s.leftReps}</span> <span>Right: ${s.rightReps}</span> <span>Weight: ${s.weight}kg</span>`;
+        } else {
+          setDiv.innerHTML = `<span>Reps: ${s.reps}</span> <span>Weight: ${s.weight}kg</span>`;
+        }
+
+        detailsDiv.appendChild(setDiv);
+      });
+    });
+
+    details.appendChild(detailsDiv);
+    workoutsList.appendChild(details);
+  });
+}
+
+// Helper to reload after delete
+function loadWorkouts() {
+  workoutsList.innerHTML = "";
+  if (!currentUser || !currentUser.workouts || currentUser.workouts.length === 0) {
+    workoutsList.innerHTML = `<p style="text-align:center; color:#9ca3af;">No workouts saved yet.</p>`;
+    return;
+  }
+
+  currentUser.workouts.forEach((workout, idx) => {
+    const details = document.createElement("details");
+    details.classList.add("exercise");
+
+    const summary = document.createElement("summary");
+    const leftDiv = document.createElement("div");
+    leftDiv.classList.add("summary-left");
+
+    const arrow = document.createElement("span");
+    arrow.classList.add("summary-arrow");
+    arrow.textContent = "▶";
+
+    const title = document.createElement("span");
+    title.textContent = `${workout.name} (${workout.date})`;
+
+    leftDiv.appendChild(arrow);
+    leftDiv.appendChild(title);
+
+    const deleteBtn = document.createElement("button");
+    deleteBtn.textContent = "Delete";
+    deleteBtn.classList.add("danger");
+    deleteBtn.addEventListener("click", (e) => {
+      e.stopPropagation();
+      currentUser.workouts.splice(idx, 1);
+      users[0] = currentUser;
+      localStorage.setItem("users", JSON.stringify(users));
+      loadWorkouts();
+    });
+
+    summary.appendChild(leftDiv);
+    summary.appendChild(deleteBtn);
+    details.appendChild(summary);
+
+    const detailsDiv = document.createElement("div");
+    detailsDiv.classList.add("exercise-details");
+
+    workout.exercises.forEach(ex => {
+      const exName = document.createElement("div");
+      exName.classList.add("exercise-name");
+      exName.textContent = `${ex.name}:`;
       detailsDiv.appendChild(exName);
 
       ex.sets.forEach(s => {
